--- a/mail/index.html
+++ b/mail/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gioco dei Dadi</title>
+    <title>Mail</title>
 
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     
-    <main>
+    <div class="check">
         <h1>
-            Gioco dei Dadi
+            Zoom su invito
         </h1>
-        <div class="number"></div>
-    </main>
+        <h3>
+            Enter your E-Mail for access
+        </h3>
+        <input type="mail">
+    </div>
 
     <script src="./js/script.js"></script>
 </body>
