rifinitura del check per la mail inserita da parte dell'utente

--- a/mail/index.html
+++ b/mail/index.html
@@ -16,7 +16,8 @@
         <h3>
             Enter your E-Mail for access
         </h3>
-        <input type="mail">
+        <input type="mail"> <br>
+        <button>Invia</button>
     </div>
 
     <script src="./js/script.js"></script>
