aggiunta della scritta nel html quando si va a inviare la mail appena inserita

--- a/mail/index.html
+++ b/mail/index.html
@@ -18,6 +18,9 @@
         </h3>
         <input type="mail"> <br>
         <button>Invia</button>
+        <h2 class="word">
+
+        </h2>
     </div>
 
     <script src="./js/script.js"></script>
