inserimento delle scritte all'interno del foglio html grazie allo script

--- a/gioco dei dadi/index.html
+++ b/gioco dei dadi/index.html
@@ -13,6 +13,16 @@
         <h1>
             Gioco dei Dadi
         </h1>
+        <div class="select">
+            <h2>
+               Your Number
+            </h2>
+        </div>
+        <div class="other-select">
+            <h2>
+                CPU Number
+            </h2>
+        </div>
         <div class="number"></div>
     </main>
 
